--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "weather-up",
   "version": "1.0.0",
+  "homepage": "https://rshah03.github.io/WeatherUp",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
@@ -26,6 +29,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
+    "gh-pages": "^1.0.0",
     "lodash": "^3.10.1",
     "react": "^0.14.9",
     "react-dom": "^0.14.3",
